[tool.poetry]
name = "python_project"
version = "0.1.0"
description = "A script to get a list of research papers"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
pandas = "^1.5.3"

[tool.poetry.scripts]
get-papers-list = "python_project.get_papers_list:main"
